2005-03-12  Dalibor Topic  <robilad@kaffe.org>

	* config/alpha/jit.h:  Use translatorlock instead of 
	translatorLock.

	* kaffe/kaffevm/jit/machine.c (initEngine): Use
	translatorlock instead of translatorLock.

2005-03-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* FAQ/FAQ.locks: Updated to match new lock algorithm.

	* kaffe/kaffevm/kaffe-gc/gc-refs.c
	(KaffeGC_rmWeakRef): Reworked memory allocation and lock sequence
	to prevent dead locks while collecting/finalizing.
	(KaffeGC_walkRefs): Do not lock here as all threads are stopped
	and this may deadlock.
	
2005-03-11  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/nio/channels/FileChannelImpl.java
	(FileChannelImpl(File, int)) Close opened file if directory. 
	Removed needless call to file.getPath().

2005-03-11 Dalibor Topic <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-10  Tom Tromey  <tromey@redhat.com>

        * java/io/InputStreamReader.java: Indentation fixlets.  Added
        '@since' markers.

2005-03-11 Dalibor Topic <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-10  Chris Burdess  <dog@bluezoo.org>

        * gnu/xml/dom/ls/SAXEventSink.java: Ignore element declarations if
        not currently parsing the DTD.

2005-03-11 Dalibor Topic <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-10  Audrius Meskauskas  <audriusa@bluewin.ch>

        * javax/swing/text/ChangedCharSetException.java,
        javax/swing/text/html/HTMLEditorKit.java,
        javax/swing/text/html/HTMLFrameHyperlinkEvent.java,
        javax/swing/text/html/parser/AttributeList.java,
        javax/swing/text/html/parser/ContentModel.java,
        javax/swing/text/html/parser/DocumentParser.java,
        javax/swing/text/html/parser/DTD.java,
        javax/swing/text/html/parser/DTDConstants.java,
        javax/swing/text/html/parser/Element.java,
        javax/swing/text/html/parser/Entity.java,
        javax/swing/text/html/parser/Parser.java,